<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mtabeapp.artistsongsearch.activities.DetailsActivity"
    android:background="@android:color/darker_gray">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@color/cardview_shadow_start_color"/>

            <TextView
                android:id="@+id/tvSongName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/ivImage"
                android:gravity="end"
                android:text="@string/song_name"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvArtistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/tvSongName"
                android:layout_below="@+id/tvSongName"
                android:text="@string/artist_name"/>

            <TextView
                android:id="@+id/tvCollectionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/tvSongName"
                android:layout_below="@+id/tvArtistName"
                android:text="@string/collection_name"/>

            <TextView
                android:id="@+id/tvGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/tvSongName"
                android:layout_below="@+id/tvCollectionName"
                android:text="@string/genre"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play"
                android:id="@+id/btnPlay"
                android:layout_below="@id/tvGenre"
                android:layout_toStartOf="@id/btnShare"
                android:onClick="play"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:id="@+id/btnShare"
                android:layout_below="@id/tvGenre"
                android:layout_alignParentEnd="true"
                android:onClick="share"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
